// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Device main infos Filter table render (no filter) Pending data render 1`] = `
<DocumentFragment>
  <div
    style="height: 400px; width: 100%;"
  >
    <div
      class="FilterTable MuiBox-root css-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren css-doyfti-MuiSkeleton-root"
        style="width: 100%; height: 203px;"
      >
        <div
          data-testid="mock-datagrid"
        >
          <table>
            <thead>
              <tr
                class="MuiDataGrid-topContainer"
              />
            </thead>
            <tbody />
          </table>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Device main infos Filter table render (no filter) Successful render 1`] = `
<DocumentFragment>
  <div
    style="height: 400px; width: 100%;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 FilterTable css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        data-testid="mock-datagrid"
      >
        <table>
          <thead>
            <tr
              class="MuiDataGrid-topContainer"
            >
              <th>
                ID
              </th>
              <th>
                Element type
              </th>
              <th>
                Field name
              </th>
              <th>
                Condition type
              </th>
              <th>
                Filter value
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Device main infos Filter table render (no filter) Unsuccessful render 1`] = `
<DocumentFragment>
  <div
    style="height: 400px; width: 100%;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 FilterTable css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      >
        Error in rendering the table : the snapshot can't be loaded!
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
